<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.example.regal360.project1.MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/calabashimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/calabash" />

            <TextView
                android:id="@+id/heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/calabashimage"
                android:background="#9E9E9E"
                android:backgroundTint="#99000000"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="44dp"
                android:paddingLeft="8dp"
                android:text="@string/CalabashDesc"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/heading1"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/Ratings"
                android:textColor="#FFFFFF" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/heading1"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:numStars="5"
                android:rating="4.6" />


            <TextView
                android:id="@+id/heading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/heading1"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/rating_bar"
                android:layout_toRightOf="@id/rating_bar"
                android:fontFamily="sans-serif-light"
                android:text="@string/Ratings1"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/call4"
                android:gravity="bottom"
                android:text="@string/CALL"
                android:textAlignment="center" />


            <Button
                android:id="@+id/direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/direct"
                android:gravity="bottom"
                android:text="@string/DIRECTIONS"
                android:textAlignment="center" />

            <Button
                android:id="@+id/menue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/menu1"
                android:gravity="bottom"
                android:text="@string/MENU"
                android:textAlignment="center" />

            <Button
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/share1"
                android:gravity="bottom"
                android:text="SHARE"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#616161" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/descript1" />

            <TextView
                android:id="@+id/textDescription1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/textDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/time" />

            <TextView
                android:id="@+id/textDescription3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/OpeningClosing" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>